<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    tools:context=".activities.AlterarSenhaActivity">

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/titulo_aplicativo"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewSubTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/alterar_senha_breadcrumble"
            android:textColor="@color/primary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHeader">

        <!-- Grupo para o Campo de Login -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/login_label"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_alterar_password_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:hint="@string/login_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/secondary" />
        </LinearLayout>

        <!-- Grupo para o Campo de Nova Senha -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nova_senha_label"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_alterar_password_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:hint="@string/nova_senha_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/secondary" />
        </LinearLayout>

        <!-- Grupo para os Botões -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/alterar_senha_alterar"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginEnd="16dp"
                android:background="@color/background_primary"
                android:text="@string/botao_alterar_text"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/alterar_senha_voltar"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:background="@color/background_primary"
                android:text="@string/botao_voltar_text"
                android:textColor="@color/primary" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
