<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    tools:context=".activities.DeletarProdutoActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/titulo_aplicativo"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deletar_produtos_breadcrumble"
            android:textColor="@color/primary"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/codigo_produto_label"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_deletar_codigo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/codigo_produto_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/secondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deletar_produto_deletar"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:background="@color/background_primary"
                android:text="@string/botao_deletar_text"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/deletar_produto_limpar"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/background_primary"
                android:text="@string/botao_limpar_text"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/deletar_produto_voltar"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:background="@color/background_primary"
                android:text="@string/botao_voltar_text"
                android:textColor="@color/primary" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>